# HappyCat

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  progress.md  spec.md
samples/: CMakeLists.txt
samples/01_triangle/: CMakeLists.txt  TriangleApp.cpp  TriangleApp.h  TrianglePass.cpp  TrianglePass.h  main.cpp
samples/02_rendergraph/: CMakeLists.txt  RenderGraphApp.cpp  RenderGraphApp.h  TrianglePass.cpp  TrianglePass.h  main.cpp
samples/03_textured_quad/: CMakeLists.txt  TexturedQuadApp.cpp  TexturedQuadApp.h  main.cpp
samples/04_pbr_material/: CMakeLists.txt  PBRMaterialApp.cpp  PBRMaterialApp.h  main.cpp
scripts/: setup_deps_linux.sh  setup_deps_windows.ps1
shaders/pbr/: pbr.frag  pbr.vert
shaders/textured_quad/: textured_quad.frag
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Math/: MathTypes.h
src/Core/Threading/: ThreadPool.cpp  ThreadPool.h
src/Core/Utils/: Assert.h  Logger.cpp  Logger.h  ResourceTracker.cpp  ResourceTracker.h  Types.h
src/Engine/: Application.cpp  Application.h  CMakeLists.txt  Engine.cpp  Engine.h  FrameContext.cpp  FrameContext.h
src/Platform/: CMakeLists.txt
src/Platform/Input/: InputManager.cpp  InputManager.h
src/Platform/Window/: GLFWWindow.cpp  GLFWWindow.h  HCWindow.cpp  HCWindow.h  Window.cpp  Window.h
src/RHI/: CMakeLists.txt  RHIDefs.h  RHITypes.h
src/RHI/Vulkan/: VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandPool.cpp  VKCommandPool.h  VKCommon.h  VKDescriptorPool.cpp  VKDescriptorPool.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKDescriptorSetLayout.cpp  VKDescriptorSetLayout.h  VKDevice.cpp  VKDevice.h  VKFence.cpp  VKFence.h  VKFramebuffer.cpp  VKFramebuffer.h  VKImage.cpp  VKImage.h  VKImageView.cpp  VKImageView.h  VKInstance.cpp  VKInstance.h  VKPhysicalDevice.cpp  VKPhysicalDevice.h  VKPipeline.cpp  VKPipeline.h  VKQueue.cpp  VKQueue.h  VKRenderPass.cpp  VKRenderPass.h  VKSampler.cpp  VKSampler.h  VKSemaphore.cpp  VKSemaphore.h  VKShaderModule.cpp  VKShaderModule.h  VKSwapChain.cpp  (+1 more)
src/Renderer/: CMakeLists.txt
src/Renderer/Material/: Material.cpp  Material.h  MaterialCache.cpp  MaterialCache.h  MaterialTypes.h  Texture2D.cpp  Texture2D.h  TextureCache.cpp  TextureCache.h
src/Renderer/RenderGraph/: DependencyBuilder.h  FrameContext.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderPass.cpp  RenderPass.h  RenderPassContext.h  RenderResource.cpp  RenderResource.h  ResourceBuilder.h
src/Renderer/Shader/: ShaderCompiler.cpp  ShaderCompiler.h
